// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`has navigationOptions 1`] = `
Object {
  "color": "#FFFFFF",
  "fontSize": 10,
  "headerBackgroundColor": "#0DC39F",
  "headerLeft": [Function],
  "headerStyle": Object {
    "backgroundColor": "#0DC39F",
    "borderBottomWidth": 0,
    "elevation": 0,
    "shadowOffset": Object {
      "height": 0,
    },
    "shadowRadius": 0,
  },
  "title": <Text>
    STEP 3/3
  </Text>,
}
`;

exports[`matches last snapshot 1`] = `
<ScrollView>
  <KeyboardFriendlyView>
    <Text>
      Everything look good?
    </Text>
    <Text>
      You can always come back and change your details at any time
    </Text>
    <View>
      <Text>
        What's the name of your community?
      </Text>
      <View>
        <Component
          allowFontScaling={true}
          disabled={true}
          rejectResponderTermination={true}
          underlineColorAndroid="rgba(0,0,0,0)"
        />
        <ForwardRef>
          <Text>
            Edit
          </Text>
        </ForwardRef>
      </View>
    </View>
    <View>
      <Text>
        What's the url of your community?
      </Text>
      <View>
        <Component
          allowFontScaling={true}
          disabled={true}
          rejectResponderTermination={true}
          underlineColorAndroid="rgba(0,0,0,0)"
        />
        <ForwardRef>
          <Text>
            Edit
          </Text>
        </ForwardRef>
      </View>
    </View>
    <Button
      disabled={false}
      onPress={[Function]}
      text="Let's Do This!"
    />
  </KeyboardFriendlyView>
</ScrollView>
`;

exports[`matches last snapshot when visible is true 1`] = `
<RCTScrollView>
  <View>
    <KeyboardFriendlyView>
      <Text>
        Everything look good?
      </Text>
      <Text>
        You can always come back and change your details at any time
      </Text>
      <View>
        <Text>
          What's the name of your community?
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            disabled={true}
            rejectResponderTermination={true}
            underlineColorAndroid="rgba(0,0,0,0)"
          />
          <View
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text>
              Edit
            </Text>
          </View>
        </View>
      </View>
      <View>
        <Text>
          What's the url of your community?
        </Text>
        <View>
          <TextInput
            allowFontScaling={true}
            disabled={true}
            rejectResponderTermination={true}
            underlineColorAndroid="rgba(0,0,0,0)"
          />
          <View
            accessible={true}
            focusable={false}
            onClick={[Function]}
            onResponderGrant={[Function]}
            onResponderMove={[Function]}
            onResponderRelease={[Function]}
            onResponderTerminate={[Function]}
            onResponderTerminationRequest={[Function]}
            onStartShouldSetResponder={[Function]}
          >
            <Text>
              Edit
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View>
          <View>
            <Text>
              This is an error
            </Text>
          </View>
        </View>
      </View>
      <View>
        <View
          accessible={true}
          focusable={true}
          onClick={[Function]}
          onResponderGrant={[Function]}
          onResponderMove={[Function]}
          onResponderRelease={[Function]}
          onResponderTerminate={[Function]}
          onResponderTerminationRequest={[Function]}
          onStartShouldSetResponder={[Function]}
        >
          <View>
            <View>
              <Text>
                Let's Do This!
              </Text>
            </View>
          </View>
        </View>
      </View>
    </KeyboardFriendlyView>
  </View>
</RCTScrollView>
`;
